@@ -13,6 +13,12 @@
     <method name="OpenURI">
       <annotation name="org.freedesktop.DBus.GLib.CSymbol" value="gwget_application_open_uri"/>
       <arg type="s" name="uri" direction="in"/>
+      <arg type="u" name="timestamp" direction="in"/>
+    </method>
+
+    <method name="OpenURIDest">
+      <annotation name="org.freedesktop.DBus.GLib.CSymbol" value="gwget_application_open_uri"/>
+      <arg type="s" name="uri" direction="in"/>
       <arg type="s" name="destination_dir" direction="in"/>
       <arg type="u" name="timestamp" direction="in"/>
     </method>
